# agent-resources-project

./: .gitignore  AGENTS.md  LICENSE  README.md
.claude/skills/changelog/: SKILL.md
.claude/skills/onboard/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/readme/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: publish-npm.yml  publish-pypi.yml
command-packages/npm/create-agent-skill-repo/: package.json
command-packages/npm/upd-agent/: package.json
command-packages/npm/upd-agent-skill/: package.json
command-packages/npm/upd-command/: package.json
command-packages/npm/upd-skill/: package.json
command-packages/npm/upd-slash-command/: package.json
command-packages/npm/upd-subagent/: package.json
command-packages/pypi/agent-upd/: README.md  pyproject.toml
command-packages/pypi/command-upd/: README.md  pyproject.toml
command-packages/pypi/create-agent-skill-repo/: README.md  pyproject.toml
command-packages/pypi/skill-upd/: README.md  pyproject.toml
command-packages/pypi/upd-agent/: README.md  pyproject.toml
command-packages/pypi/upd-agent-skill/: pyproject.toml
command-packages/pypi/upd-command/: README.md  pyproject.toml
command-packages/pypi/upd-skill/: README.md  pyproject.toml
docs/: flywheel-acceleration.md  index.html  killer-skills-research.md
src/agent-resources/: pyproject.toml
src/agent-resources/agent_resources/cli/: agent.py  command.py  common.py  skill.py
src/agent-skills-upd/: README.md  pyproject.toml
src/agent-skills-upd-npm/: package.json
src/agent-skills-upd/tests/: test_cli_skill.py  (+1 more)
(+22 files in other folders)
