[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-resources"
version = "0.3.0"
description = "Add Claude Code skills, commands, and agents from GitHub to your project"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
skill-add = "agent_resources.cli.skill:app"
command-add = "agent_resources.cli.command:app"
agent-add = "agent_resources.cli.agent:app"
create-agent-resources-repo = "agent_resources.cli.create:app"

[tool.hatch.build.targets.wheel]
packages = ["agent_resources"]
